--- a/dhg.css
+++ b/dhg.css
@@ -1,3 +1,14 @@
+
+body {
+	background-image: url('fon-tank.jpg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	
+}
+
+
+
 .play-button{
 	position: absolute;
 	top: 50%;
