--- a/dhg.css
+++ b/dhg.css
@@ -3,7 +3,7 @@ body {
 	background-image: url('fon-tank.jpg');
 	background-position: center center;
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: 100% 100%;
 	
 }
 
@@ -30,7 +30,7 @@ body {
 
 .igrok-img {
 	position: absolute;
-	top: 40%;
+	top: 58%;
 	left: 50%;
     width: 10%;
 	height: 10%;
@@ -43,7 +43,7 @@ body {
 
 .protivnik-blue {
 	position: absolute;
-	top: 40%;
+	top: 58%;
 	left: 90%;
     width: 10%;
 	height: 10%;
@@ -55,7 +55,7 @@ body {
 
 .protivnik-red {
 	position: absolute;
-	top: 40%;
+	top: 58%;
 	left: 1%;
     width: 10%;
 	height: 10%;
@@ -113,7 +113,7 @@ body {
 	background: red;
 	display: none;
 	position: absolute;
-	top: 42%;
+	top: 59%;
 	left: 10%;
     width: 5%;
 	height: 5%;
