--- a/dhg.css
+++ b/dhg.css
@@ -110,7 +110,6 @@ body {
 
 
 .vsriv {
-	background: red;
 	display: none;
 	position: absolute;
 	top: 59%;
@@ -118,4 +117,6 @@ body {
     width: 5%;
 	height: 5%;
 	border-radius: 20px;
+	background-image: url('vzriv.png');
+	background-size: 100% 100%;
 }
